--- a/src/index.html
+++ b/src/index.html
@@ -378,7 +378,7 @@
 
                         <!--filter-->
                         <div id="tm-common-game-filter" class="tm-filter" hidden>
-                            <div class="uk-flex-between" uk-grid>
+                            <div class="uk-flex-between uk-grid-small" uk-grid>
                                 <div>
                                     <h3>Роль</h3>
                                     <div class="uk-button-group">
