--- a/src/page-2.html
+++ b/src/page-2.html
@@ -150,7 +150,7 @@
 
                         <!--filter-->
                         <div id="tm-my-game-filter" class="tm-filter" hidden>
-                            <div class="uk-flex-between" uk-grid>
+                            <div class="uk-flex-between uk-grid-small" uk-grid>
                                 <div>
                                     <h3>Роль</h3>
                                     <div class="uk-button-group">
@@ -435,7 +435,7 @@
 
                         <!--filter-->
                         <div id="tm-common-game-filter" class="tm-filter" hidden>
-                            <div class="uk-flex-between" uk-grid>
+                            <div class="uk-flex-between uk-grid-small" uk-grid>
                                 <div>
                                     <h3>Роль</h3>
                                     <div class="uk-button-group">
