filter adaptive fixes, 960* all

--- a/src/page-3.html
+++ b/src/page-3.html
@@ -68,7 +68,7 @@
 
                     <!--game header-->
                     <div class="tm-box-small tm-background-top tm-fonts-top">
-                        <div class="uk-flex-between uk-flex-middle" uk-grid>
+                        <div class="uk-flex-between uk-flex-middle uk-grid-small" uk-grid>
                             <div>
                                 <div class="uk-flex-middle" uk-grid>
                                     <div>
