--- a/src/page-4.html
+++ b/src/page-4.html
@@ -68,9 +68,9 @@
 
                     <!--game header-->
                     <div class="tm-box-small tm-background-top tm-fonts-top">
-                        <div class="uk-flex-between uk-flex-middle" uk-grid>
+                        <div class="uk-child-width-expand uk-flex-between uk-flex-middle" uk-grid>
                             <div>
-                                <div class="uk-flex-middle" uk-grid>
+                                <div class="uk-flex-between uk-flex-middle uk-grid-small" uk-grid>
                                     <div>
                                         <div class="uk-flex uk-flex-middle">
                                             <div class="tm-icon-wrap tm-user-icon uk-margin-small-right">
@@ -126,7 +126,7 @@
                                 </div>
                             </div>
 
-                            <div>
+                            <div class="uk-width-auto">
                                 <button type="button" class="tm-button-tertiary uk-button">Присоединиться к игре</button>
                             </div>
                         </div>
