--- a/src/page-4.html
+++ b/src/page-4.html
@@ -68,7 +68,7 @@
 
                     <!--game header-->
                     <div class="tm-box-small tm-background-top tm-fonts-top">
-                        <div class="uk-child-width-expand uk-flex-between uk-flex-middle" uk-grid>
+                        <div class="uk-child-width-expand@m uk-flex-between uk-flex-middle" uk-grid>
                             <div>
                                 <div class="uk-flex-between uk-flex-middle uk-grid-small" uk-grid>
                                     <div>
@@ -126,7 +126,7 @@
                                 </div>
                             </div>
 
-                            <div class="uk-width-auto">
+                            <div class="uk-flex uk-flex-right uk-width-auto@m">
                                 <button type="button" class="tm-button-tertiary uk-button">Присоединиться к игре</button>
                             </div>
                         </div>
