--- a/src/page-4.html
+++ b/src/page-4.html
@@ -182,8 +182,12 @@
 
                             <div>
                                 <h2>Розыгрыш</h2>
-                                <div class="tm-equal-height uk-background-primary">
+                                <div class="uk-position-relative tm-equal-height uk-background-primary">
                                     <canvas id="tm-raffle-canvas" class="tm-raffle-canvas"></canvas>
+                                    <div class="tm-overlay">
+                                        <h3>Подождите</h3>
+                                        <div>Идёт определение победителя</div>
+                                    </div>
                                 </div>
                             </div>
 
