--- a/src/index.html
+++ b/src/index.html
@@ -128,12 +128,12 @@
                             </div>
 
                             <div>
-                                <div class="uk-grid-small uk-flex-middle" uk-grid>
+                                <div class="uk-child-width-expand@s uk-grid-small uk-flex-middle" uk-grid>
 
                                     <!--sorting-->
                                     <div>
-                                        <div class="uk-grid-small uk-flex-middle" uk-grid>
-                                            <div>
+                                        <div class="uk-child-width-expand@s uk-grid-small uk-flex-middle" uk-grid>
+                                            <div class="uk-width-auto@s">
                                                 <h3>Сортировать</h3>
                                             </div>
 
@@ -148,7 +148,7 @@
                                     </div>
 
                                     <!--show filter-->
-                                    <div>
+                                    <div class="uk-flex uk-flex-right uk-width-auto@s">
                                         <button type="button" class="tm-button-filter uk-button"
                                                 uk-toggle="target: #tm-my-game-filter; animation: uk-animation-fade">
                                             Фильтр
