--- a/src/index.html
+++ b/src/index.html
@@ -128,7 +128,7 @@
                             </div>
 
                             <div>
-                                <div class="uk-child-width-expand@s uk-grid-small uk-flex-middle" uk-grid>
+                                <div class="uk-child-width-expand@s uk-flex-middle" uk-grid>
 
                                     <!--sorting-->
                                     <div>
