--- a/src/page-2.html
+++ b/src/page-2.html
@@ -114,12 +114,12 @@
                             </div>
 
                             <div>
-                                <div class="uk-grid-small uk-flex-middle" uk-grid>
+                                <div class="uk-child-width-expand@s uk-flex-middle" uk-grid>
 
                                     <!--sorting-->
                                     <div>
-                                        <div class="uk-grid-small uk-flex-middle" uk-grid>
-                                            <div>
+                                        <div class="uk-child-width-expand@s uk-grid-small uk-flex-middle" uk-grid>
+                                            <div class="uk-width-auto@s">
                                                 <h3>Сортировать</h3>
                                             </div>
 
@@ -134,7 +134,7 @@
                                     </div>
 
                                     <!--show filter-->
-                                    <div>
+                                    <div class="uk-flex uk-flex-right uk-width-auto@s">
                                         <button type="button" class="tm-button-filter uk-button"
                                                 uk-toggle="target: #tm-my-game-filter; animation: uk-animation-fade">
                                             Фильтр
@@ -399,17 +399,17 @@
                             </div>
 
                             <div>
-                                <div class="uk-grid-small uk-flex-middle" uk-grid>
+                                <div class="uk-child-width-expand@s uk-flex-middle" uk-grid>
 
                                     <!--sorting-->
                                     <div>
-                                        <div class="uk-grid-small uk-flex-middle" uk-grid>
-                                            <div>
+                                        <div class="uk-child-width-expand@s uk-grid-small uk-flex-middle" uk-grid>
+                                            <div class="uk-width-auto@s">
                                                 <h3>Сортировать</h3>
                                             </div>
 
                                             <div>
-                                                <select class="tm-select-sort uk-select" name="select-sort-all-games">
+                                                <select class="tm-select-sort uk-select" name="select-sort-my-games">
                                                     <option>От большего количества участников к меньшему</option>
                                                     <option>Другое</option>
                                                     <option>Другое</option>
@@ -419,7 +419,7 @@
                                     </div>
 
                                     <!--show filter-->
-                                    <div>
+                                    <div class="uk-flex uk-flex-right uk-width-auto@s">
                                         <button type="button" class="tm-button-filter uk-button"
                                                 uk-toggle="target: #tm-common-game-filter; animation: uk-animation-fade">
                                             Фильтр
