--- a/src/page-3.html
+++ b/src/page-3.html
@@ -148,7 +148,7 @@
                                         </li>
                                         <li class="tm-connected">
                                             <div class="uk-flex uk-flex-between">
-                                                <div>0x828gfge5645ygdfgb6jfgjn6t65j235235b8</div>
+                                                <div class="uk-text-truncate">0x828gfge5645ygdfgb6jfgjn6t65j235235b8</div>
                                                 <div class="tm-text-bets">1.5 <span class="uk-text-uppercase">eth</span></div>
                                             </div>
                                         </li>
