--- a/src/index.html
+++ b/src/index.html
@@ -64,55 +64,59 @@
 
                 <!--new game-->
                 <div class="tm-box-large tm-top uk-border-rounded">
-                    <div class="uk-flex-bottom uk-flex-between uk-grid-small" uk-grid>
+                    <div class="uk-child-width-expand@m uk-flex-bottom uk-flex-between uk-grid-small" uk-grid>
                         <div>
-                            <h2>Создать <br>
-                                новую игру
-                            </h2>
-                        </div>
-
-                        <!--type-->
-                        <div>
-                            <h3>Тип игры</h3>
-                            <div class="uk-grid-small" uk-grid>
+                            <div class="uk-flex-bottom uk-flex-between uk-grid-small" uk-grid>
                                 <div>
-                                    <select class="tm-select-top uk-select" name="select-top">
-                                        <option>Приватная</option>
-                                        <option>Другая</option>
-                                        <option>Другая</option>
-                                    </select>
+                                    <h2>Создать <br>
+                                        новую игру
+                                    </h2>
                                 </div>
 
+                                <!--type-->
                                 <div>
-                                    <button type="button" class="tm-button-whitelist uk-button uk-button-default">
-                                        <i class="fa fa-plus" aria-hidden="true"></i>
-                                        <!--<img src="/images/plus-round.png" alt="" />-->
-                                        Whitelist
-                                    </button>
+                                    <h3>Тип игры</h3>
+                                    <div class="uk-grid-small" uk-grid>
+                                        <div>
+                                            <select class="tm-select-top uk-select" name="select-top">
+                                                <option>Приватная</option>
+                                                <option>Другая</option>
+                                                <option>Другая</option>
+                                            </select>
+                                        </div>
+
+                                        <div>
+                                            <button type="button" class="tm-button-whitelist uk-button uk-button-default">
+                                                <i class="fa fa-plus" aria-hidden="true"></i>
+                                                <!--<img src="/images/plus-round.png" alt="" />-->
+                                                Whitelist
+                                            </button>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <!--bet-->
+                                <div>
+                                    <h3>Сумма ставки</h3>
+                                    <div>
+                                        <div class="uk-inline">
+                                            <span class="uk-form-icon uk-form-icon-flip">eth</span>
+                                            <input class="uk-input uk-background-secondary" type="text" value="0.0001">
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <!--players-->
+                                <div>
+                                    <h3>Макс. кол-во игроков</h3>
+                                    <div>
+                                        <input class="uk-input uk-background-secondary uk-text-center" type="text" value="10">
+                                    </div>
                                 </div>
                             </div>
                         </div>
 
-                        <!--bet-->
-                        <div>
-                            <h3>Сумма ставки</h3>
-                            <div>
-                                <div class="uk-inline">
-                                    <span class="uk-form-icon uk-form-icon-flip">eth</span>
-                                    <input class="uk-input uk-background-secondary" type="text" value="0.0001">
-                                </div>
-                            </div>
-                        </div>
-
-                        <!--players-->
-                        <div>
-                            <h3>Макс. кол-во игроков</h3>
-                            <div>
-                                <input class="uk-input uk-background-secondary uk-text-center" type="text" value="10">
-                            </div>
-                        </div>
-
-                        <div>
+                        <div class="uk-width-auto@m uk-flex uk-flex-right">
                             <button type="button" class="tm-button-tertiary uk-button">Играть</button>
                         </div>
 
