--- a/src/index.html
+++ b/src/index.html
@@ -66,7 +66,7 @@
                 <div class="tm-box-large tm-top uk-border-rounded">
                     <div class="uk-child-width-expand@m uk-flex-bottom uk-flex-between uk-grid-small" uk-grid>
                         <div>
-                            <div class="uk-flex-bottom uk-flex-between uk-grid-small" uk-grid>
+                            <div class="uk-child-width-auto@s uk-flex-bottom uk-flex-between uk-grid-small" uk-grid>
                                 <div>
                                     <h2>Создать <br>
                                         новую игру
@@ -76,7 +76,7 @@
                                 <!--type-->
                                 <div>
                                     <h3>Тип игры</h3>
-                                    <div class="uk-grid-small" uk-grid>
+                                    <div class="uk-child-width-auto@s uk-grid-small" uk-grid>
                                         <div>
                                             <select class="tm-select-top uk-select" name="select-top">
                                                 <option>Приватная</option>
