--- a/src/page-3.html
+++ b/src/page-3.html
@@ -70,7 +70,7 @@
                     <div class="tm-box-small tm-background-top tm-fonts-top">
                         <div class="uk-child-width-expand@m uk-flex-between uk-flex-middle" uk-grid>
                             <div>
-                                <div class="uk-flex-between uk-flex-middle uk-grid-small" uk-grid>
+                                <div class="uk-child-width-auto@s uk-flex-between uk-flex-middle uk-grid-small" uk-grid>
                                     <div>
                                         <div class="uk-flex uk-flex-middle">
                                             <div class="tm-icon-wrap tm-user-icon uk-margin-small-right">
