--- a/src/page-4.html
+++ b/src/page-4.html
@@ -70,7 +70,7 @@
                     <div class="tm-box-small tm-background-top tm-fonts-top">
                         <div class="uk-child-width-expand@m uk-flex-between uk-flex-middle" uk-grid>
                             <div>
-                                <div class="uk-flex-between uk-flex-middle uk-grid-small" uk-grid>
+                                <div class="uk-child-width-auto@s uk-flex-between uk-flex-middle uk-grid-small" uk-grid>
                                     <div>
                                         <div class="uk-flex uk-flex-middle">
                                             <div class="tm-icon-wrap tm-user-icon uk-margin-small-right">
@@ -182,7 +182,7 @@
 
                             <div>
                                 <h2>Розыгрыш</h2>
-                                <div class="uk-position-relative tm-equal-height uk-background-primary">
+                                <div class="tm-equal-height tm-canvas-wrapper uk-position-relative uk-background-primary">
                                     <canvas id="tm-raffle-canvas" class="tm-raffle-canvas"></canvas>
                                     <div class="tm-overlay">
                                         <h3>Подождите</h3>
