--- a/src/page-4.html
+++ b/src/page-4.html
@@ -203,7 +203,7 @@
                                 <h2>Рассказать о игре друзьям</h2>
 
                                 <div class="uk-flex-middle uk-flex-between  uk-grid-small" uk-grid>
-                                    <div class="uk-width-expand">
+                                    <div class="uk-width-expand@s">
                                         <input class="uk-input" type="text" value="https://CryptoBets.com/b/hsкеуф%B8" readonly>
                                     </div>
 
@@ -215,7 +215,7 @@
 
                             <div>
                                 <h2>Поделиться в соц. сетях</h2>
-                                <div class="tm-social social-likes uk-flex uk-flex-between uk-child-width-expand">
+                                <div class="tm-social social-likes uk-flex uk-flex-wrap uk-flex-between uk-child-width-expand" uk-margin>
                                     <div data-service="facebook" title="Share link on Facebook"></div>
                                     <div data-service="twitter" title="Share link on Twitter"></div>
                                     <div data-service="plusone" title="Share link on Google+"></div>
