--- a/src/page-3.html
+++ b/src/page-3.html
@@ -78,7 +78,7 @@
                                             </div>
 
                                             <div>
-                                                <h3>Игроки</h3>
+                                                <h3 class="uk-margin-remove">Игроки</h3>
                                                 <div><span>5</span>/<span>10</span></div>
                                             </div>
                                         </div>
@@ -91,7 +91,7 @@
                                             </div>
 
                                             <div>
-                                                <h3>Ставка</h3>
+                                                <h3 class="uk-margin-remove">Ставка</h3>
                                                 <div>1,5 <span class="uk-text-uppercase">eth</span></div>
                                             </div>
                                         </div>
@@ -104,7 +104,7 @@
                                             </div>
 
                                             <div>
-                                                <h3>Приз</h3>
+                                                <h3 class="uk-margin-remove">Приз</h3>
                                                 <div>15 <span class="uk-text-uppercase">eth</span></div>
                                             </div>
                                         </div>
@@ -117,7 +117,7 @@
                                             </div>
 
                                             <div>
-                                                <h3>Тип игры</h3>
+                                                <h3 class="uk-margin-remove">Тип игры</h3>
                                                 <div>Открытая</div>
                                             </div>
                                         </div>
