--- a/src/page-2.html
+++ b/src/page-2.html
@@ -219,7 +219,7 @@
                                         </div>
 
                                         <div class="uk-card-footer uk-width-auto@s">
-                                            <div class="uk-flex-middle uk-flex-between" uk-grid>
+                                            <div class="uk-flex-middle uk-flex-between uk-grid-small" uk-grid>
                                                 <div>
                                                     <h3>Тип игры</h3>
                                                     <div class="tm-game-type-marker">Приватная</div>
@@ -249,7 +249,7 @@
                                         </div>
 
                                         <div class="uk-card-footer uk-width-auto@s">
-                                            <div class="uk-flex-middle uk-flex-between" uk-grid>
+                                            <div class="uk-flex-middle uk-flex-between uk-grid-small" uk-grid>
                                                 <div>
                                                     <h3>Тип игры</h3>
                                                     <div class="tm-game-type-marker">Приватная</div>
@@ -279,7 +279,7 @@
                                         </div>
 
                                         <div class="uk-card-footer uk-width-auto@s">
-                                            <div class="uk-flex-middle uk-flex-between" uk-grid>
+                                            <div class="uk-flex-middle uk-flex-between uk-grid-small" uk-grid>
                                                 <div>
                                                     <h3>Тип игры</h3>
                                                     <div class="tm-game-type-marker">Приватная</div>
@@ -309,7 +309,7 @@
                                         </div>
 
                                         <div class="uk-card-footer uk-width-auto@s">
-                                            <div class="uk-flex-middle uk-flex-between" uk-grid>
+                                            <div class="uk-flex-middle uk-flex-between uk-grid-small" uk-grid>
                                                 <div>
                                                     <h3>Тип игры</h3>
                                                     <div class="tm-game-type-marker">Приватная</div>
@@ -339,7 +339,7 @@
                                         </div>
 
                                         <div class="uk-card-footer uk-width-auto@s">
-                                            <div class="uk-flex-middle uk-flex-between" uk-grid>
+                                            <div class="uk-flex-middle uk-flex-between uk-grid-small" uk-grid>
                                                 <div>
                                                     <h3>Тип игры</h3>
                                                     <div class="tm-game-type-marker">Приватная</div>
@@ -369,7 +369,7 @@
                                         </div>
 
                                         <div class="uk-card-footer uk-width-auto@s">
-                                            <div class="uk-flex-middle uk-flex-between" uk-grid>
+                                            <div class="uk-flex-middle uk-flex-between uk-grid-small" uk-grid>
                                                 <div>
                                                     <h3>Тип игры</h3>
                                                     <div class="tm-game-type-marker">Приватная</div>
